re PR fortran/26551 (gfortran compiles recursive subroutines declared without the RECURSIVE attribute)

PR fortran/26551

	* resolve.c (resolve_call, resolve_function): Issue an error
	if a function or subroutine call is recursive but the function or
	subroutine wasn't declared as such.

	* gfortran.dg/recursive_check_1.f: New test.

From-SVN: r113860